--- a/style/style.css
+++ b/style/style.css
@@ -33,6 +33,7 @@ footer, header, hgroup, menu, nav, section {
 }
 body {
     line-height: 1;
+    background: #f4e5e5;
 }
 ol, ul {
     list-style: none;
@@ -68,6 +69,7 @@ header {
 
     z-index: 10;
     height: 80px;
+    position: fixed;
 }
 
 #headerwrapper{
@@ -104,7 +106,7 @@ header {
     background-color:#f0f4f8;
     text-align: center;
     transform: translateX(100%);
-    transition: transform 0.6s ease;
+    transition: transform 0.2s ease;
     border-left: 3px solid #262e43;
     z-index: 10000;
 }
@@ -146,7 +148,7 @@ header {
     background-color:#f0f3f8;
     text-align: center;
     transform: translateX(100%);
-    transition: transform 0.6s ease;
+    transition: transform 0.2s ease;
     border-left: 3px solid #262e43;
 }
 
@@ -224,18 +226,37 @@ header {
 /* ---------------- main ----------------- */
 
 main {
-
+    padding-top: 80px;
 }
 
-.textsession{
-    width: auto;
+
+.fulltextboxwrapper {
+    max-width: 1080px;
+    margin: auto;
+    padding: 55px 50px;
+}
+
+.fulltextboxwrapper h1 {
+    font-size: 2em;
+    line-height: 1.3em;
+    text-align: center;
+}
+
+.fulltextboxwrapper p {
+    line-height: 1.5em;
+    padding-top: 35px;
+    padding-bottom: 10px;
+}
+
+.fulltextsection{
+    background: #f4e5e5;
+
 }
 
 .leftbox {
-    width: 44%;
-    height: 230px;
+    height: auto;
     float: left;
-    padding: 4% 3%    
+    padding: 5% 4%    
 }
 
 .leftbox > .textboxwrapper {
@@ -243,18 +264,15 @@ main {
 }
 
 .rightbox {
-    width: 44%;
-    height: 230px;
+    height: auto;
     float: left;
-    padding: 4% 3%
+    padding: 5% 4%
 }
 
-.textboxwrapper {
-    max-width: 480px;
-}
+
 
 .textboxwrapper h2 {
-    font-size: 1.4em;
+    font-size: 1.6em;
     margin-bottom: 20px;
 }
 
@@ -274,12 +292,23 @@ main {
 }
 #leftboxtwo{
     background: #fb4f4f;
-    
+
 }
 #rightboxtwo{
     background: #f77d7d;
 }
 
+/* --------------- footer ----------------- */
+
+footer {
+    
+}
+
+footer > p {
+    font-size: 1.1em;
+    text-align: center;
+    padding: 12px;
+}
 
 /* ---------------- slider ---------------- */
 
@@ -289,6 +318,7 @@ main {
     position: relative;
     max-height: 600px;
     overflow: hidden;
+    
 }
 
 .rslides {
@@ -298,6 +328,7 @@ main {
     width: 100%;
     padding: 0;
     margin: 0;
+    
 }
 
 .rslides li {
@@ -307,12 +338,14 @@ main {
     width: 100%;
     left: 0;
     top: 0;
+    
 }
 
 .rslides li:first-child {
     position: relative;
     display: block;
     float: left;
+    
 }
 
 .rslides img {
@@ -320,7 +353,9 @@ main {
     height: auto;
     float: left;
     width: 100%;
+    
     border: 0;
+    
 }
 
 .callbacks_nav{
@@ -336,18 +371,19 @@ main {
     margin-top: -45px;
     -webkit-tap-highlight-color:rgba(0,0,0,0);
     text-decoration: none;
-    
-    
+
+
     transition: all 0.2s;
     -o-transition: all 0.2s;
     -ms-transition: all 0.2s;
     -moz-transition: all 0.2s;
     -webkit-transition: all 0.2s;
+    
 }
 
 .callbacks_nav:active {
-  opacity: 1.0;
-  }
+    opacity: 1.0;
+}
 .callbacks_nav:hover {
     opacity: 1.0;
 }
@@ -390,6 +426,16 @@ main {
     .desknav {
         display: none;
     }
+    .rightbox {
+        width: 94%;
+    }
+    .leftbox {
+        width: 94%;
+    }
+    .textsectiondouble {
+        overflow-y: hidden;
+        overflow-x: hidden;
+    }
 } 
 
 
@@ -405,11 +451,30 @@ main {
 
 }
 @media all and (min-width: 856px) {
+    .rightbox {
+        width: 42%;
+        padding-top: 5%;
+        padding-bottom: 999px;
+        margin-bottom: -999px;
+    }
+    .leftbox {
+        width: 42%;
+        padding-top: 5%;
+        padding-bottom: 999px;
+        margin-bottom: -999px;
+    }
     .mobilnav {
         display: none;
     }
     .desknav {
         display: block;
+    }
+    .textboxwrapper {
+        max-width: 480px;
+    }
+    .textsectiondouble {
+        padding-bottom: 60px;
+
     }
 }
 @media all and (min-width: 960px) {
@@ -417,11 +482,21 @@ main {
 }
 
 @media all and (min-width: 1020px) {
-
+    .rightbox {
+        padding-top: 4%;
+    }
+    .leftbox {
+        padding-top: 4%;
+    }
 }
 
 @media all and (min-width: 1440px) {
-
+    .rightbox {
+        padding-top: 3%;
+    }
+    .leftbox {
+        padding-top: 3%;
+    }
 }
 
 
