--- a/style/style.css
+++ b/style/style.css
@@ -82,11 +82,9 @@ header {
 
 #logo{
     float: left;
-    margin-top: 14px;
-    width: 202px;
-    margin-left: 10px;
-    z-index: 100 !important; 
-    position: relative;
+    margin-top: 10px;
+    margin-left: 30px;
+    height: 60px;
 }
 #mobillogo{
     float: left;
@@ -103,11 +101,11 @@ header {
     right: 0;
     width: 100%;
     height: 120%;
-    background-color:#f0f4f8;
+    background-color:#f4e5e5;
     text-align: center;
     transform: translateX(100%);
-    transition: transform 0.2s ease;
-    border-left: 3px solid #262e43;
+    transition: transform 0.7s ease;
+    border-left: 3px solid #911b1b;
     z-index: 10000;
 }
 .mobilnav.open {
@@ -115,23 +113,24 @@ header {
 }
 .mobilnav li{
     list-style: none;
+    line-height: 1.5em;
 }
 .mobilnav ul a{
     text-decoration: none;
     padding: 25px 20px;
     display:block;
-    color: #262e43;
+    color: #911b1b;
     font-size: 1.3em;
     max-width: 60%;
     margin-left: auto;
     margin-right: auto;
 }
 .mobilnav ul a:active{
-    color: #262e43;
+    color: #911b1b;
     font-weight: bold;
 }
 .mobilnav ul a:hover{
-    color: #262e43;
+    color: #911b1b;
     font-weight: bold;
 }
 
@@ -149,7 +148,7 @@ header {
     text-align: center;
     transform: translateX(100%);
     transition: transform 0.2s ease;
-    border-left: 3px solid #262e43;
+    border-left: 3px solid #911b1b;
 }
 
 .submenu1.opensub {
@@ -159,7 +158,20 @@ header {
 .nav-toggle{
     float: right;
     cursor: pointer;
+    width: 70px;
+    height: 70px;
+    margin-top: 5px;
+    margin-right: 10px;
+    background: url(../img/icon/burger2.png);
 }
+
+.nav-toggle:hover {
+    background: url(../img/icon/burger2hover.png);
+}
+.nav-toggle:active {
+    background: url(../img/icon/burger2hover.png);
+}
+
 
 .toggleclose{
     float: right;
@@ -178,6 +190,10 @@ header {
 }
 .marginwrap {
     margin-top: 15%;
+}
+a > span {
+    color: #6c1919; 
+    margin-right:8px;
 }
 
 /* ------------------- desknav ------------------ */
@@ -298,6 +314,53 @@ main {
     background: #f77d7d;
 }
 
+.fullpic {
+    width: 100%;
+    max-height: 650px;
+}
+
+/* ------------- medarbejder -------------- */
+
+.employeesection {
+    max-width: 1080px;
+    margin: auto;
+
+}
+
+.employeesection > img {
+    height: 200px;
+    width: 200px;
+    border-radius: 1000px;
+    border: solid 6px #fb4f4f;
+    display: inline-block;
+    margin-left: 20px;
+}
+
+.employeetext {
+    display: inline-block;
+    vertical-align: text-top;
+    vertical-align: text-top;
+}
+
+.floatnone {
+    float: none;
+}
+
+.employeeleft {
+    float: right;
+}
+
+.employeetext > h4 {
+    font-weight: bold;
+    font-size: 1.3em;
+    margin-bottom: 18px;
+    color: #480808;
+}
+.employeetext > p {
+    line-height: 1.7em;
+}
+
+
 /* --------------- footer ----------------- */
 
 footer {
@@ -316,9 +379,9 @@ footer > p {
     margin-left: auto;
     margin-right: auto;
     position: relative;
-    max-height: 600px;
+    max-height: 650px;
     overflow: hidden;
-    
+    max-width: 1400px;
 }
 
 .rslides {
@@ -328,7 +391,7 @@ footer > p {
     width: 100%;
     padding: 0;
     margin: 0;
-    
+
 }
 
 .rslides li {
@@ -338,14 +401,14 @@ footer > p {
     width: 100%;
     left: 0;
     top: 0;
-    
+
 }
 
 .rslides li:first-child {
     position: relative;
     display: block;
     float: left;
-    
+
 }
 
 .rslides img {
@@ -353,9 +416,9 @@ footer > p {
     height: auto;
     float: left;
     width: 100%;
-    
+
     border: 0;
-    
+
 }
 
 .callbacks_nav{
@@ -378,7 +441,7 @@ footer > p {
     -ms-transition: all 0.2s;
     -moz-transition: all 0.2s;
     -webkit-transition: all 0.2s;
-    
+
 }
 
 .callbacks_nav:active {
@@ -401,6 +464,8 @@ footer > p {
     height: 400px;
     z-index: 1;
     position: relative;
+    border-top: solid 1px #641717;
+    border-bottom: solid 1px #641717;
 }
 .overlay {
     background:transparent; 
@@ -412,7 +477,30 @@ footer > p {
     z-index: 2;
 }
 
+#mapadress {
+    position: relative;
+    width: 200px;
+    height: 130px;
+    margin-top: -290px; 
+    margin-left: 68%;
+    background-color: rgba(152, 39, 39, 0.54);
+    z-index: 3;
+    border-radius: 5px;
+}
 
+#mapadress > ul {
+    text-align: center;
+
+}
+
+#mapadress > ul > li {
+    padding-top: 17px;
+}
+#mapadress > ul > li > h4 {
+    font-weight: bold;
+    font-size: 1.2em;
+
+}
 
 /* ---------------- mediaQ ----------------- */
 
@@ -436,6 +524,34 @@ footer > p {
         overflow-y: hidden;
         overflow-x: hidden;
     }
+    #mapadress{
+        display: none;
+    }
+    .nav-toggle {
+        display: block;
+    }
+    .employeesection {
+        padding: 0;
+    }
+    .employeetext {
+        width: 92%;
+        float: none;
+        padding: 40px 4%;
+        margin-bottom: 20px;
+    }
+    .employeetext > h4, .employeetext > p {
+        text-align: center;
+    }
+    .employeesection img {
+        display: block;
+        margin-top: 40px;
+        margin-bottom: 20px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    .employeeleft {
+        float: none;
+    }
 } 
 
 
@@ -451,6 +567,31 @@ footer > p {
 
 }
 @media all and (min-width: 856px) {
+    .employeeleft {
+        float: right;
+    }
+    .employeesection {
+        padding: 60px 40px;
+    }
+    .employeesection > img {
+        display: inline-block;
+        margin-left: 10px;
+        margin-top: 0;
+        margin-bottom: 0;
+    }
+    .employeetext > h4, .employeetext > p {
+        text-align: left;
+    }
+    .employeetext {
+        float: right;
+        width: 62%;
+    }
+    .floatnone {
+        float: none;
+    }
+    .nav-toggle {
+        display: none;
+    }
     .rightbox {
         width: 42%;
         padding-top: 5%;
@@ -474,8 +615,13 @@ footer > p {
     }
     .textsectiondouble {
         padding-bottom: 60px;
+        margin-top: 160px;
 
     }
+    #mapadress {
+        display: block;
+    }
+
 }
 @media all and (min-width: 960px) {
 
@@ -496,6 +642,9 @@ footer > p {
     }
     .leftbox {
         padding-top: 3%;
+    }
+    #mapadress {
+        margin-left: 60%;
     }
 }
 
